Fix vertical alignment of record/variant tables, disable word wrapping on types

--- a/share/ocamlary.css
+++ b/share/ocamlary.css
@@ -78,9 +78,10 @@
     margin-bottom: 1em;
 }
 
-/* Type representation indentation */
+/* Field/constructor indentation */
 .ocamlary-doc .cons > td,
 .ocamlary-doc .field > td {
+    vertical-align: top;
     padding: 0;
 }
 
@@ -89,6 +90,18 @@
 .ocamlary-doc .field td:nth-child(1),
 .ocamlary-doc .field td:nth-child(n+4) {
     padding-left: 1.5em;
+}
+
+/* Field/constructor type nowrap */
+.ocamlary-doc .cons td:nth-child(1),
+.ocamlary-doc .field td:nth-child(2) {
+    white-space: nowrap;
+}
+
+/* Field/constructor comment syntax alignment */
+.ocamlary-doc .cons td:nth-child(4),
+.ocamlary-doc .field td:nth-child(6) {
+    vertical-align: bottom;
 }
 
 /* Fragment highlighting */
@@ -112,7 +125,6 @@
     margin-top: 0;
     margin-left: -1.3em;
     color: #999999;
-    font-size: 1.3em;
     text-decoration: none;
 }
 
